--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,8 @@ addons:
 node_js:
   - 10
 before_install:
-  - npm install -g gulp
+  - npm install -g gulp webdriver-manager
+  - webdriver-manager update --chrome=true
   - git clone --branch=$TRAVIS_BRANCH https://github.com/unitejs/framework.git unitejs/unitejs-framework
   - cd unitejs/unitejs-framework
   - npm link
